--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
         }
         .option-item {
             display: flex;
-            align-items: flex-start; /* rata atas */
-            margin: 10px 0; /* lebih rapat */
+            align-items: flex-start;
+            margin: 8px 0; /* lebih rapat lagi */
             font-size: 1.2em;
         }
         .circle-number {
@@ -173,7 +173,7 @@
             justify-content: center;
             font-weight: bold;
             font-size: 1.2em;
-            margin-right: 18px;
+            margin-right: 20px;
             flex-shrink: 0;
         }
         .option-text {
@@ -182,8 +182,8 @@
         }
         .option-item input[type="radio"] {
             transform: scale(1.6);
-            margin-right: 18px;
-            margin-top: 6px; /* penyesuaian agar rata dengan lingkaran */
+            margin-right: 20px;
+            margin-top: 8px; /* penyesuaian agar rata sempurna dengan lingkaran */
         }
         /* 3 Tombol Bawah */
         .nav-buttons {
@@ -271,6 +271,7 @@
         </div>
     </div>
 
+    <!-- Script tetap sama -->
     <script>
         const validCredentials = {
             "uus": "123",
